themes/dijit.css
/* ... */
.dijitSliderBumperV {
	width:4px;
	height:8px;
	border-width:0 1px;
}

.dijitSliderBumperH {
	width:8px;
	height:4px;
	border-width:1px 0;
}

.dijitSliderBottomBumper,
.dijitSliderLeftBumper {
	background-color:red;
}

.dijitSliderTopBumper,
.dijitSliderRightBumper {
	background-color:transparent;
}

.dijitSliderDecorationH {
	text-align:center;
}

.dijitSlider .dijitSliderButton {
	font-family:monospace;
	margin:0;
	padding:0;
	display:block;
}

.dijit_a11y .dijitSliderButtonInner {
	visibility:visible !important;
}

.dijitSliderButtonContainer {
	text-align:center;
	height:0;
}

.dijitSlider .dijitButtonNode {
	padding:0;
	display:block;
}

.dijitRuleContainer {
	position:relative;
	overflow:visible;
}

.dijitRuleContainerV {
	height:100%;
	line-height:0;
	float:left;
	text-align:left;
}

.dj_opera .dijitRuleContainerV {
	line-height:2%;
}

.dj_ie .dijitRuleContainerV {
	line-height:normal;
}

.dj_gecko .dijitRuleContainerV {
	margin:0 0 1px 0; /* mozilla bug workaround for float:left,height:100% block elements */
}

.dijitRuleMark {
	position:absolute;
	border:1px solid black;
	line-height:0;
	height:100%;
}

.dijitRuleMarkH {
	width:0;
	border-top-width:0 !important;
	border-bottom-width:0 !important;
	border-left-width:0 !important;
}

.dijitRuleLabelContainer {
	position:absolute;
}

.dijitRuleLabelContainerH {
	text-align:center;
	display:inline-block;
}

.dijitRuleLabelH {
	position:relative;
	left:-50%;
}

.dijitRuleMarkV {
	height:0;
	border-right-width:0 !important;
	border-bottom-width:0 !important;
	border-left-width:0 !important;
	width:100%;
	left:0;
}

.dj_ie .dijitRuleLabelContainerV {
	margin-top:-.55em;
}

/* Toolbar A11y */
.dijit_a11y .dijitButtonContents .dijitButtonText {
	display: inline !important;
}

.dijitTextArea {
	width:100%;
	overflow: auto;	/* w/out this IE's SimpleTextArea goes to overflow: scroll */
}
.dijitTextArea[cols] {
	width:auto; /* SimpleTextArea cols */
}
.dj_ie .dijitTextAreaCols {
	width:auto;
}
.dijitTextArea > DIV {
	text-decoration:none;
	overflow:auto;
	min-height: 1.40em;
}

.dj_ie .dijitTextArea p {
	margin-top:0;
	margin-bottom:0;
	line-height: normal !important;
}

.dijitToolbarSeparator {
	height: 18px;
	width: 5px;
	padding: 0 1px;
	margin: 0;
}

/* Editor */
.dijitIEFixedToolbar {
	position:absolute;
	/* top:0; */
	top: expression(eval((document.documentElement||document.body).scrollTop));
}

/* TimePicker */

.dijitTimePickerItemInner {
	text-align:center;
	border:0;
	padding:2px 8px 2px 8px;
}

.dijitTimePickerTick,
.dijitTimePickerMarker {
	border-bottom:1px solid gray;
}

.dijitTimePicker .dijitDownArrowButton {
	border-top: none !important;
}

.dijitTimePickerTick {
	color:#CCC;
}

.dijitTimePickerMarker {
	color:black;
	background-color:#CCC;
}

.dijitTimePickerItemSelected {
	font-weight:bold;
	color:#333;
	background-color:#b7cdee;
}

.dijitTimePickerItemHover {
	background-color:gray;
	color:white;
	cursor:pointer;
}

.dijit_a11y .dijitTimePickerItem {
	border-bottom:1px solid #333;	
}


/* Disable the high contrast character */
.dijitToggleButtonIconChar {
	display:none !important;
}
.dijit_a11y .dijitToggleButtonIconChar {
	display:inline !important;
}

.dijit_a11y .dijitToggleButtonIconChar {
	visibility:hidden;
}
.dijit_a11y .dijitToggleButtonChecked .dijitToggleButtonIconChar {
	visibility:visible !important;
}

.dijitArrowButtonChar {
	display:none !important;
}
.dijit_a11y .dijitArrowButtonChar {
	display:inline !important;
}
.dijitInputLayoutContainer {
	position: relative;
	overflow: hidden;
}
.dijitSpinnerButtonContainer {
	float: right;
	width: 18px;
	position: relative;
	overflow: hidden;
}
.dijitSpinner .dijitInputLayoutContainer .dijitArrowButton {
	height: 50%;
	width: 16px;
	overflow: hidden;
}
.dijitSpinner .dijitInputLayoutContainer .dijitArrowButtonInner {
	overflow: hidden;
	line-height: 50%;
}
.dijit_a11y .dijitSpinner .dijitInputLayoutContainer .dijitArrowButton {
	width: 100%;
}
.dijit_a11y .dijitSpinner .dijitArrowButton .dijitArrowButtonChar {
	font-size: 0.4em;
	vertical-align: top;
}
.dijit_a11y .dijitSpinnerButtonContainer {
	width: 0.5em;
	margin-left: 2px;
	overflow: visible;
}
.dijit_a11y .dijitSpinnerButtonContainer .dijitButtonNode {
	border-width: 1px 0px 0px 1px;
	border-style: solid !important;
}

